# Scoring_Model_Enhanced

./: .dockerignore  .env.example  .gitignore  .onedriveignore  .project-structure.md  .pytest.out  .tmp_post_batches.ps1  ANONYMIZATION_TEST_RESULTS.md  COMPLIANCE_AUDIT.md  DEPLOYMENT_GUIDE.md  DIAGNOSTIC_REPORT.md  Dockerfile  Dockerfile.streamlit  LICENSE  MLFLOW_API_COMMANDS.md  MLFLOW_RATIONALIZATION_PLAN.md  MLFLOW_STATUS_REPORT.md  MLFLOW_SUMMARY.md  MLOPS_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PREDICTION_DIFFERENCES_EXPLAINED.md  PREVENTION_MEASURES.md  PROBABILITY_DIFFERENCES_EXPLAINED.md  PROJECT_STATUS.md  QUICK_START.md  RATIONALIZATION_SUMMARY.py  README.md  REQUIREMENTS_COMPLIANCE_AUDIT.md  SIMPLE_FIX.md  START_COMMANDS.ps1  TEST_SET_PREDICTION_ISSUE.md  _ul  _ul-NOUVEAU-MAITRE  analyze_mlflow_structure.py  analyze_runs.py  api_mlflow_interaction_analysis.py  api_vs_streamlit_architecture.py  architecture_summary.txt  check_artifacts.py  check_db_schema.py  (+41 more)
.claude/: settings.local.json
.streamlit/: config.toml
api/: app.py  batch_predictions.py  drift_api.py  drift_detection.py  file_validation.py  json_utils.py  metrics.py  mlflow_loader.py  model_validator.py  onnx_wrapper.py  preprocessing_pipeline.py
backend/: __init__.py  auth.py  crud.py  database.py  init_db.py  init_db.sql  models.py  schema.dot  schema_visual.html
config/: all_features.json  all_raw_features.json  critical_features.json  critical_raw_features.json  feature_importance.csv  feature_ranges.json  model_feature_importance.csv  model_features.txt  raw_feature_importance.json  required_files.json
docs/: API.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DRIFT_DETECTION.md  INDEX.md  MLFLOW_RATIONALIZATION_COMPLETE.md  MODEL_CARD.md  MODEL_MONITORING.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SETUP.md  TECHNICAL_GUIDE.md  USER_GUIDE.md
logs/: predictions.jsonl
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_models.ipynb  03_baseline_models.nbconvert.ipynb  04_hyperparameter_optimization.ipynb  05_model_interpretation.ipynb  model_comparison.csv  results.ipynb
reports/: performance_profile.txt
results/: all_runs_analysis.csv  best_params.json  cv_experiment_summary_fbeta.csv  cv_experiments_summary.csv  end_user_test_predictions.csv  feature_engineering_comparison.csv  (+4 more)
(+285 files in other folders)
