[project]
name = "Scoring_Model"
version = "0.1.0"
description = ""
authors = [
    {name = "Shahul SHAIK",email = "shah.data.scientist@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "scikit-learn",
    "imbalanced-learn",
    "shap",
    "pandas",
    "matplotlib",
    "plotly",
    "openpyxl",
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "mlflow (>=3.6.0,<4.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "xgboost (>=2.0.0,<3.0.0)",
    "lightgbm (>=4.0.0,<5.0.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9.0"
pytest-cov = ">=7.0.0,<8.0.0"
pytest-asyncio = ">=1.2.0,<2.0.0"
ruff = "^0.14.4"
mypy = "^1.18.2"
black = "^25.11.0"
selenium = "^4.38.0"
jupyter = "^1.1.1"
nbformat = "^5.10.4"

[tool.pytest.ini_options]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I", "N", "D", "UP", "ANN", "ASYNC", "B", "C4", "DTZ", "ERA", "FA", "ISC", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "ARG", "PERF", "PTH", "PL"]
ignore = ["D100", "D104", "D105", "D107", "ANN101", "ANN002", "ANN003", "ANN201", "ANN204", "ANN401"] # Ignore missing docstrings and some type hints for now

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports in __init__.py
"tests/test_streamlit_app.py" = ["ANN401", "RET503"] # Allow dynamically typed expressions in test mocks and ignore false positive RET503
"utils.py" = ["ANN401"] # Allow dynamically typed expressions in utility functions

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["venv/", ".venv/", "tests/", "htmlcov/", "__pycache__/", "outputs/", "data/", "Project Inputs/", "api/app/"]



